[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1_1"
path = "src/day_1/1_1.rs"

[[bin]]
name = "1_2"
path = "src/day_1/1_2.rs"

[[bin]]
name = "2_1"
path = "src/day_2/2_1.rs"
