[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13"
regex = "1.11.1"
strum = "0.26"
strum_macros = "0.26"

[[bin]]
name = "1_1"
path = "src/day_1/1_1.rs"

[[bin]]
name = "1_2"
path = "src/day_1/1_2.rs"

[[bin]]
name = "2_1"
path = "src/day_2/2_1.rs"

[[bin]]
name = "2_2"
path = "src/day_2/2_2.rs"

[[bin]]
name = "3_1"
path = "src/day_3/3_1.rs"

[[bin]]
name = "3_2"
path = "src/day_3/3_2.rs"

[[bin]]
name = "4_1"
path = "src/day_4/4_1.rs"

[[bin]]
name = "4_2"
path = "src/day_4/4_2.rs"

[[bin]]
name = "5_1"
path = "src/day_5/5_1.rs"

[[bin]]
name = "5_2"
path = "src/day_5/5_2.rs"

[[bin]]
name = "6_1"
path = "src/day_6/6_1.rs"

[[bin]]
name = "6_2"
path = "src/day_6/6_2.rs"

[[bin]]
name = "7_1"
path = "src/day_7/7_1.rs"

[[bin]]
name = "7_2"
path = "src/day_7/7_2.rs"

[[bin]]
name = "8_1"
path = "src/day_8/8_1.rs"

[[bin]]
name = "8_2"
path = "src/day_8/8_2.rs"

[[bin]]
name = "9_1"
path = "src/day_9/9_1.rs"

[[bin]]
name = "9_2"
path = "src/day_9/9_2.rs"

[[bin]]
name = "10_1"
path = "src/day_10/10_1.rs"

[[bin]]
name = "10_2"
path = "src/day_10/10_2.rs"

[[bin]]
name = "11_1"
path = "src/day_11/11_1.rs"

[[bin]]
name = "11_2"
path = "src/day_11/11_2.rs"
